--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
 
 <Body>
 	Welcome to Haojun Lu's website!
+	<br>
 </Body>
+
+
+<object data="flame2.png" type="image/svg+xml">
+	  <img src="./img/flame2.png">
+</object>
 
 
