my first article. very ugly

--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
 	<br>
 </Body>
 
+<br>
 
 <object data="flame2.png" type="image/svg+xml">
-	  <img src="./img/flame2.png">
+	  <img src="./img/flame2.png"
+	  width="100" height="100"
+	  >
 </object>
+<br>
+<br>
 
+<a href="./article">
+	articles
+</a>
 
