--- a/article/article1.html
+++ b/article/article1.html
@@ -1,13 +1,16 @@
 Set up a website with own domain name
 <br>
-Rent a domain name from Google Domains (my choice at the time being).
 <br>
+Rent a domain name from Google Domains (my choice at the time being).
 Other provider may or may not work, eg Tecent, Alibaba, GoDadd. Seems my website can be visited from China. 
+<br>
 <br>
 Set up your github repo. The name MUST be yourgitid.github.io 
 <br>
 echo hello > index.html
+<br>
 in repo setting, set Custom domain to www.example.net 
+<br>
 <br>
 Google domain --> Configure DNS -> Custom resource records <br>
 Name:www
@@ -16,7 +19,8 @@ TYPE: CNAME
 <br>
 DATA:yourgitid.github.io
 <br>
-Congrates!
+<br>
+Congrats!
 
 
 
