--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 	<title>Haojun Lu</title>
 </head>
 
-<Body>
+<body style="background-color:PALEGREEN;">
+<h1 style="margin-top: 10;" align="center">
+	<font color="black">
+		<span style="font-size: 24pt">
 	Welcome to Haojun Lu's website!
-	<br>
-</Body>
+		</span><br>
+	</font></h1>
 
 <br>
 
@@ -17,7 +20,8 @@
 <br>
 <br>
 
-<a href="./article">
+<a href="./article/index.html">
 	articles
 </a>
+</body>
 
