--- a/article/article1.html
+++ b/article/article1.html
@@ -1,6 +1,12 @@
-Set up a website with own domain name
-<br>
-<br>
+<body style="background-color:PALEGREEN;">
+
+<h1 style="margin-top: 10;" align="center">
+	<font color="black">
+		<span style="font-size: 24pt">
+Set up a website with your own domain name
+		</span><br>
+	</font></h1>
+
 Rent a domain name, say yourdomain.net from Google Domains (my choice at the time being).
 Other provider may or may not work, eg Tecent, Alibaba, GoDaddy. Seems my website can be visited from China. 
 <br>
@@ -11,7 +17,7 @@ echo hello > index.html
 <br>
 <br>
 yourgitid.github.io --> Settings --> GitHub Pages <br>
-Custom domain:www.yourdomain.net
+Custom domain: www.yourdomain.net
 <br>
 <br>
 Google domain --> Configure DNS --> Custom resource records <br>
@@ -19,14 +25,11 @@ Name:www
 <br>
 TYPE: CNAME
 <br>
-DATA:yourgitid.github.io
+DATA: yourgitid.github.io
 <br>
 <br>
 curl www.yourdomain.net
 <br>
 <br>
 Congrats!
-
-
-
-
+</body>
