--- a/article/index.html
+++ b/article/index.html
@@ -1,3 +1,12 @@
+<body style="background-color:PALEGREEN;">
+
+<h1 style="margin-top: 10;" align="center">
+	<font color="black">
+		<span style="font-size: 24pt">
+			Articles
+		</span><br>
+	</font></h1>
+
 <a href="./article1.html">
-	Set up my own website
+Set up a website with your own domain name
 </a>
