--- a/article/article1.html
+++ b/article/article1.html
@@ -1,12 +1,18 @@
-<body style="background-color:PALEGREEN;">
+<head>
+	<title>Haojun Lu</title>
+	<link rel="icon" href="./img/flame1.png">
+</head>
+
+<body style="background-color:black;">
 
 <h1 style="margin-top: 10;" align="center">
-	<font color="black">
+	<font color="grey">
 		<span style="font-size: 24pt">
 Set up a website with your own domain name
 		</span><br>
 	</font></h1>
 
+	<font color="grey">
 Rent a domain name, say yourdomain.net from Google Domains (my choice at the time being).
 Other provider may or may not work, eg Tecent, Alibaba, GoDaddy. Seems my website can be visited from China. 
 <br>
@@ -32,4 +38,10 @@ curl www.yourdomain.net
 <br>
 <br>
 Congrats!
+<br>
+<br>
+<a href="./index.html">
+Back
+</a>
+	</font>
 </body>
