--- a/article/index.html
+++ b/article/index.html
@@ -1,7 +1,12 @@
-<body style="background-color:PALEGREEN;">
+<head>
+	<title>Haojun Lu</title>
+	<link rel="icon" href="./img/flame1.png">
+</head>
+
+<body style="background-color:black;">
 
 <h1 style="margin-top: 10;" align="center">
-	<font color="black">
+	<font color="grey">
 		<span style="font-size: 24pt">
 			Articles
 		</span><br>
