--- a/index.html
+++ b/index.html
@@ -1,24 +1,29 @@
 <head>
 	<title>Haojun Lu</title>
+	<link rel="icon" href="./img/flame1.png">
+
+<style>
+img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+</style>
 </head>
 
-<body style="background-color:PALEGREEN;">
+<body style="background-color:black;">
 <h1 style="margin-top: 10;" align="center">
-	<font color="black">
+	<font color="silver">
 		<span style="font-size: 24pt">
 	Welcome to Haojun Lu's website!
 		</span><br>
 	</font></h1>
-
+	<img src="./img/flame1.png" style="width:3%">
+	<img src="./img/flame1.png" style="width:6%">
+	<img src="./img/flame1.png" style="width:12%">
+	<img src="./img/flame1.png" style="width:24%">
 <br>
 
-<object data="flame2.png" type="image/svg+xml">
-	  <img src="./img/flame2.png"
-	  width="100" height="100"
-	  >
-</object>
-<br>
-<br>
 
 <a href="./article/index.html">
 	articles
