--- a/article/article1.html
+++ b/article/article1.html
@@ -3,7 +3,6 @@
 	<link rel="icon" href="./img/flame1.png">
 </head>
 
-<body style="background-color:black;">
 
 <h1 style="margin-top: 10;" align="center">
 	<font color="grey">
@@ -12,7 +11,6 @@ Set up a website with your own domain name
 		</span><br>
 	</font></h1>
 
-	<font color="grey">
 Rent a domain name, say yourdomain.net from Google Domains (my choice at the time being).
 Other provider may or may not work, eg Tecent, Alibaba, GoDaddy. Seems my website can be visited from China. 
 <br>
@@ -40,8 +38,7 @@ curl www.yourdomain.net
 Congrats!
 <br>
 <br>
-<a href="./index.html">
+<a href="../index.html">
 Back
 </a>
-	</font>
 </body>
