--- a/article/set_up_website.html
+++ b/article/set_up_website.html
@@ -5,12 +5,11 @@
 
 
 <h1 style="margin-top: 10;" align="center">
-	<font color="grey">
 		<span style="font-size: 24pt">
 Set up a website with your own domain name
 		</span><br>
-	</font></h1>
-
+</h1>
+<body>
 Rent a domain name, say yourdomain.net from Google Domains (my choice at the time being).
 Other provider may or may not work, eg Tecent, Alibaba, GoDaddy. Seems my website can be visited from China. 
 <br>
