--- a/index.html
+++ b/index.html
@@ -11,13 +11,25 @@
 	</font>
 </h1>
 <br>
-<h1>Link</h1>
+<h1>Contact</h1>
 <a href="https://www.github.com/Lst0621/">GitHub</a>
 <a href="https://www.linkedin.com/in/haojunlu/">LinkedIn</a>
 <a href="http://www.haojunlu.net">Personal website</a>
 
+<h1>Calendar</h1>
+<table id="demo"></table>
+
 <h1>Articles</h1>
-<a href="./article/article1.html">
+<body>
+<a href="article/set_up_website.html">
 	Set up a website with your own domain name
 </a>
+<br>
+<a href="article/github_io_deploy.html">
+	GitHub IO Deploy
+</a>
 
+</body>
+
+
+<script src="src/calendar.js"></script>
