--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h1>Contact</h1>
 <a href="https://www.github.com/Lst0621/">GitHub</a>
 <a href="https://www.linkedin.com/in/haojunlu/">LinkedIn</a>
-<a href="http://www.haojunlu.net">Personal website</a>
+<a href="http://www.haojunlu.com">Personal website</a>
 
 <h1>Calendar</h1>
 <table id="demo"></table>
@@ -28,8 +28,14 @@
 <a href="article/github_io_deploy.html">
 	GitHub IO Deploy
 </a>
-
 </body>
 
+<h1>Game trick</h1>
+<body>
+<a href="article/click.html">
+	Auto mouse click script
+</a>
+<br>
+</body>
 
 <script src="src/calendar.js"></script>
