--- a/index.html
+++ b/index.html
@@ -16,10 +16,8 @@
 <a href="https://www.linkedin.com/in/haojunlu/">LinkedIn</a>
 <a href="http://www.haojunlu.com">Personal website</a>
 
-<h1>Calendar</h1>
-<table id="demo"></table>
 
-<h1>Articles</h1>
+<h1>Website</h1>
 <body>
 <a href="article/set_up_website.html">
 	Set up a website with your own domain name
@@ -28,6 +26,12 @@
 <a href="article/github_io_deploy.html">
 	GitHub IO Deploy
 </a>
+<br>
+<h1>Widgets</h1>
+<a href="article/tree.html">
+	Fractal tree
+</a>
+<br>
 </body>
 
 <h1>Game trick</h1>
@@ -38,4 +42,6 @@
 <br>
 </body>
 
+<h1>Calendar</h1>
+<table id="demo"></table>
 <script src="src/calendar.js"></script>
