--- a/article/tree.html
+++ b/article/tree.html
@@ -11,14 +11,14 @@
 
 <body>
 <p align="center">
-<canvas id="tree" width="600" height="400"
+<canvas id="tree" width="800" height="500"
         style="border: 0px solid black;" >
 </canvas>
 </p>
 <script src="../src/tree.js"></script>
 <p style="white-space:pre-wrap" >
 A fractal tree written in ts.
-<script src="https://emgithub.com/embed.js?target=https%3A%2F%2Fgithub.com%2FLst0621%2FLst0621.github.io%2Fblob%2Fmaster%2Fsrc%2Ftree.ts&style=solarized-light&showBorder=on&showLineNumbers=on&showFileMeta=on"></script>
+<script src="https://emgithub.com/embed.js?target=https://github.com/Lst0621/Lst0621.github.io/blob/master/src/tree.ts&style=solarized-light&showBorder=on&showLineNumbers=on&showFileMeta=on"></script>
 <a href="../index.html">
     Back
 </a>
