--- a/index.html
+++ b/index.html
@@ -1,51 +1,84 @@
 <head>
-	<title>Haojun Lu</title>
-	<link rel="icon" href="./img/flame1.png">
+    <title>Haojun Lu</title>
+    <link rel="icon" href="./img/flame1.png">
 </head>
 
 <h1 style="margin-top: 10;" align="center">
-	<font color="black">
-		<span style="font-size: 24pt">
+    <font color="black" face="Courier">
+		<span style="font-size: 24pt; font-weight:normal">
 	Welcome to Haojun Lu's website!
 		</span><br>
-	</font>
+    </font>
 </h1>
 <br>
-<h1>Contact</h1>
-<a href="https://www.github.com/Lst0621/">GitHub</a>
-<a href="https://www.linkedin.com/in/haojunlu/">LinkedIn</a>
-<a href="http://www.haojunlu.com">Personal website</a>
+<h1>
+		<span style="font-size: 12pt; font-family: Courier;">
+	Contact
+		</span>
+</h1>
+<a href="https://www.github.com/Lst0621/"><span style="font-family: Courier;font-size: 12pt; ">GitHub</span></a><br>
+<a href="https://www.linkedin.com/in/haojunlu/"><span style="font-family: Courier;font-size: 12pt; ">LinkedIn</span></a>
+<br>
+<a href="http://www.haojunlu.com"><span style="font-family: Courier;font-size: 12pt; ">Personal website</span></a><br>
+<br>
 
 
-<h1>Website</h1>
-<body>
-<a href="article/set_up_website.html">
+<h1>
+		<span style="font-size: 12pt; font-family: Courier; padding-bottom: 0pt">
+	Website
+		</span>
+</h1>
+<body style="font-family:'Verdana'">
+<a href="article/set_up_website.html"><span style="font-family: Courier;font-size: 12pt;  ">
 	Set up a website with your own domain name
+</span>
 </a>
 <br>
-<a href="article/github_io_deploy.html">
+<a href="article/github_io_deploy.html"><span style="font-family: Courier;font-size: 12pt;  ">
 	GitHub IO Deploy
+</span>
 </a>
 <br>
-<h1>Widgets</h1>
+<br>
+<h1>
+		<span style="font-size: 12pt; font-family: Courier;">
+	Widgets
+		</span>
+</h1>
 <a href="article/tree.html">
+	<span style="font-family: Courier;font-size: 12pt;  ">
 	Fractal tree
+</span>
 </a>
 <br>
+
 <a href="article/gol.html">
+	<span style="font-family: Courier;font-size: 12pt;  ">
 	Game of Life
+	</span>
+</a>
+<br>
+
+<a href="article/calendar.html">
+	<span style="font-family: Courier;font-size: 12pt;  ">
+	Calendar
+	</span>
 </a>
 <br>
 </body>
 
-<h1>Game trick</h1>
+<br>
+<h1>
+	<span style="font-size: 12pt; font-family: Courier;">
+	Game trick
+	</span>
+</h1>
 <body>
 <a href="article/click.html">
+	<span style="font-family: Courier;font-size: 12pt;  ">
 	Auto mouse click script
+	</span>
 </a>
 <br>
 </body>
 
-<h1>Calendar</h1>
-<table id="demo"></table>
-<script src="src/calendar.js"></script>
