minor format change

--- a/article/github_io_deploy.html
+++ b/article/github_io_deploy.html
@@ -1,6 +1,6 @@
 <head>
 	<title>Haojun Lu</title>
-	<link rel="icon" href="./img/flame1.png">
+	<link rel="icon" href="../img/flame1.png">
 </head>
 
 
