--- a/article/set_up_website.html
+++ b/article/set_up_website.html
@@ -1,6 +1,6 @@
 <head>
 	<title>Haojun Lu</title>
-	<link rel="icon" href="./img/flame1.png">
+	<link rel="icon" href="../img/flame1.png">
 </head>
 
 
@@ -10,34 +10,27 @@ Set up a website with your own domain name
 		</span><br>
 </h1>
 <body>
+<p style="white-space:pre-wrap" >
 Rent a domain name, say yourdomain.net from Google Domains (my choice at the time being).
-Other provider may or may not work, eg Tecent, Alibaba, GoDaddy. Seems my website can be visited from China. 
-<br>
-<br>
-Set up your github repo. The name MUST be yourgitid.github.io 
-<br>
+Other provider may or may not work, eg Tecent, Alibaba, GoDaddy. Seems my website can be visited from China.
+
+Set up your github repo. The name MUST be yourgitid.github.io
+
 echo hello > index.html
-<br>
-<br>
-yourgitid.github.io --> Settings --> GitHub Pages <br>
+
+yourgitid.github.io --> Settings --> GitHub Pages
 Custom domain: www.yourdomain.net
-<br>
-<br>
-Google domain --> Configure DNS --> Custom resource records <br>
+
+Google domain --> Configure DNS --> Custom resource records
 Name:www
-<br>
 TYPE: CNAME
-<br>
 DATA: yourgitid.github.io
-<br>
-<br>
 curl www.yourdomain.net
-<br>
-<br>
+
 Congrats!
-<br>
-<br>
+
 <a href="../index.html">
 Back
 </a>
+</p>
 </body>
