--- a/article/calendar.html
+++ b/article/calendar.html
@@ -3,31 +3,32 @@
     <link rel="icon" href="../img/flame1.png">
 </head>
 
-<h1 style="margin-top: 10;" align="center">
-	<font color="black" face="Courier">
-		<span style="font-size: 24pt; font-weight:normal">
-	Calendar
-		</span><br>
-	</font>
+<h1 id="calender_title"; style="margin-top: 10;font-family: Courier;font-size: 18pt;font-weight:normal" align="center">
 </h1>
 
-</h1>
-<img id="calendar1" height="300px">
-<img id="calendar2" height="300px">
-<img id="calendar3" height="300px">
-<br>
-<img id="calendar4" height="300px">
-<img id="calendar5" height="300px">
-<img id="calendar6" height="300px">
-<br>
-<img id="calendar7" height="300px">
-<img id="calendar8" height="300px">
-<img id="calendar9" height="300px">
-<br>
-<img id="calendar10" height="300px">
-<img id="calendar11" height="300px">
-<img id="calendar12" height="300px">
-<br>
+<p align="center">
+	<button onclick="update_year(-1);update_images()">prev</button>
+	<button onclick="update_year(+1);update_images()">next</button>
+	<br>
+	<img id="calendar1" height="300px">
+	<img id="calendar2" height="300px">
+	<img id="calendar3" height="300px">
+	<img id="calendar4" height="300px">
+	<br>
+	<img id="calendar5" height="300px">
+	<img id="calendar6" height="300px">
+	<img id="calendar7" height="300px">
+	<img id="calendar8" height="300px">
+	<br>
+	<img id="calendar9" height="300px">
+	<img id="calendar10" height="300px">
+	<img id="calendar11" height="300px">
+	<img id="calendar12" height="300px">
+	<br>
+	<button onclick="update_year(-1);update_images()">prev</button>
+	<button onclick="update_year(+1);update_images()">next</button>
+</p>
+
 <table id="demo"></table>
 <script src="../src/calendar.js"></script>
 
