--- a/index.html
+++ b/index.html
@@ -82,3 +82,15 @@
 <br>
 </body>
 
+<h1>
+		<span style="font-size: 12pt; font-family: Courier;">
+            Miscellaneous
+		</span>
+</h1>
+<a href="article/reading_list.html">
+	<span style="font-family: Courier;font-size: 12pt;  ">
+	Reading List
+	</span>
+</a>
+<br>
+
