--- a/article/reading_list.html
+++ b/article/reading_list.html
@@ -70,95 +70,16 @@
         <br>
     </h1>
 </div>
-<div class="books">
-    <div class="book">
-        <h1>
-            鲁迅杂文精选
-        </h1>
-        <img src="https://m.media-amazon.com/images/I/514fDa3jQ+L.jpg">
-        <br>
-        <br>
-        B009Z5TEE4
-    </div>
-    <div class="book">
-        <h1>
-            呐喊
-        </h1>
-        <img src="https://m.media-amazon.com/images/I/51un6ZRgZtL.jpg">
-        <br>
-        <br>
-        B009FRHRAA
-    </div>
-    <div class="book">
-        <h1>
-            Modern Operating Systems
-        </h1>
-        <img src="https://www.pearsonhighered.com/assets/bigcovers/0/1/3/3/013359162X.jpg">
-        <br>
-        <br>
-        978-0133591620
-    </div>
 
 
+<div id="books-2021-01" class="books">
 </div>
-
-
-<br>
 <div class="year_style">
     2020
 </div>
-<div class="books">
-    <div class="book">
-        <h1>
-            Effective Java
-        </h1>
-        <img src="https://learning.oreilly.com/library/cover/9780137150021/250w/">
-        <br>
-        <br>
-        9780137150021
-    </div>
-
-    <div class="book">
-        <h1>
-            江村经济：中国农民的生活
-        </h1>
-        <img src="https://pic.cp.com.cn/Images/2014/5/8/144112404800c8bcd-9_hwc268268.jpg">
-        <br>
-        <br>
-        978-7-100-02795-3
-    </div>
-
-    <div class="book">
-        <h1>
-            Design Patterns: Elements of Reusable Object-Oriented Software
-        </h1>
-        <img src="https://images-na.ssl-images-amazon.com/images/I/51szD9HC9pL.jpg">
-        <br>
-        <br>
-        978-0201633610
-    </div>
-
-    <div class="book">
-        <h1>
-            From Mathematics to Generic Programming
-        </h1>
-        <img src="https://images-na.ssl-images-amazon.com/images/I/5194c6yZKcL.jpg">
-        <br>
-        <br>
-        978-0321942043
-    </div>
-
-    <div class="book">
-        <h1>
-            C Programming Language
-        </h1>
-        <img src="https://images-na.ssl-images-amazon.com/images/I/411ejyE8obL.jpg">
-        <br>
-        <br>
-        978-0131103627
-    </div>
-
+<div id="books-2020" class="books">
 </div>
+
 <br>
 <br>
 <br>
@@ -170,3 +91,5 @@
 	Back
 	</span>
 </a>
+
+<script src="../src/books.js"></script>
