--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
 	</script>
 </head>
 
+<style>
+	html * {
+		background: darkseagreen;
+	}
+</style>
+
 <h1 style="margin-top: 10;" align="center">
     <font color="black" face="Courier">
 		<span style="font-size: 24pt; font-weight:normal">
@@ -85,6 +91,12 @@
 <a href="article/click.html">
 	<span style="font-family: Courier;font-size: 12pt;  ">
 	Auto mouse click script
+	</span>
+</a>
+<br>
+<a href="article/controller.html">
+	<span style="font-family: Courier;font-size: 12pt;  ">
+	How to request Xbox Controller repair
 	</span>
 </a>
 <br>
