--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 		</span>
 </h1>
 <body style="font-family:'Verdana'">
-<a href="article/set_up_website.html"><span style="font-family: Courier;font-size: 12pt;  ">
+<a href="article/set_up_website.html"><span style="font-family: Courier;font-size: 12pt;">
 	Set up a website with your own domain name
 </span>
 </a>
 <br>
-<a href="article/github_io_deploy.html"><span style="font-family: Courier;font-size: 12pt;  ">
+<a href="article/github_io_deploy.html"><span style="font-family: Courier;font-size: 12pt;">
 	GitHub IO Deploy
 </span>
 </a>
@@ -60,21 +60,21 @@
 		</span>
 </h1>
 <a href="article/tree.html">
-	<span style="font-family: Courier;font-size: 12pt;  ">
+	<span style="font-family: Courier;font-size: 12pt;">
 	Fractal tree
 </span>
 </a>
 <br>
 
 <a href="article/gol.html">
-	<span style="font-family: Courier;font-size: 12pt;  ">
+	<span style="font-family: Courier;font-size: 12pt;">
 	Game of Life
 	</span>
 </a>
 <br>
 
 <a href="article/calendar.html">
-	<span style="font-family: Courier;font-size: 12pt;  ">
+	<span style="font-family: Courier;font-size: 12pt;">
 	Calendar
 	</span>
 </a>
@@ -89,13 +89,13 @@
 </h1>
 <body>
 <a href="article/click.html">
-	<span style="font-family: Courier;font-size: 12pt;  ">
+	<span style="font-family: Courier;font-size: 12pt;">
 	Auto mouse click script
 	</span>
 </a>
 <br>
 <a href="article/controller.html">
-	<span style="font-family: Courier;font-size: 12pt;  ">
+	<span style="font-family: Courier;font-size: 12pt;">
 	How to request Xbox Controller repair
 	</span>
 </a>
@@ -108,8 +108,14 @@
 		</span>
 </h1>
 <a href="article/reading_list.html">
-	<span style="font-family: Courier;font-size: 12pt;  ">
+	<span style="font-family: Courier;font-size: 12pt;">
 	Reading List
+	</span>
+</a>
+<br>
+<a href="article/frog_toad.html">
+	<span style="font-family: Courier;font-size: 12pt;">
+	Frog & Toad
 	</span>
 </a>
 <br>
