add calendar team mate

--- a/article/calendar.html
+++ b/article/calendar.html
@@ -32,6 +32,11 @@
     <br>
     Each month is illustrated with images of the twelve main gods of Norse mythology.
     <br>
+    The 1st day of each month always appears in the top left corner.
+    <br>
+    In addition to the original 1911 version, now you can view calendar in this style for any year.
+    <br>
+    Collaborated with <a href="https://www.linkedin.com/in/yuanxicheng/">Xicheng Yuan</a>
     <br>
 </p>
 
