change index page color and title

--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 	</script>
 </head>
 
+<meta name="theme-color" content="#FFBA84" />
 <style>
 	html * {
-		background: darkseagreen;
+		background: #FFBA84;
 	}
 </style>
 
-<h1 style="margin-top: 10;" align="center">
+<h1 style="margin-top: 10;" align="left">
+	<meta charset="utf-8">
     <font color="black" face="Courier">
 		<span style="font-size: 24pt; font-weight:normal">
-	Welcome to Haojun Lu's website!
+			陆昊俊/ Haojun Lu
 		</span><br>
     </font>
 </h1>
