--- a/article/gol.html
+++ b/article/gol.html
@@ -12,8 +12,8 @@
 </head>
 
 <h1 style="margin-top: 10;" align="center">
-		<span style="font-size: 24pt">
-            Game of Life
+		<span id="head_span" style="font-size: 24pt">
+            Game of Life<br>gen: 0 cell: 0
 		</span><br>
 </h1>
 
@@ -30,6 +30,7 @@
 <script src="../src/game_of_life.js"></script>
 <p style="white-space:pre-wrap" >
 The game of life written in ts.
+</p>
 <script src="https://emgithub.com/embed.js?target=https://github.com/Lst0621/Lst0621.github.io/blob/master/src/game_of_life.ts&style=solarized-light&showBorder=on&showLineNumbers=on&showFileMeta=on"></script>
 <a href="../index.html">
     Back
