--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 <a href="https://www.linkedin.com/in/haojunlu/"><span style="font-family: Courier;font-size: 12pt; ">LinkedIn</span></a>
 <br>
 <a href="http://www.haojunlu.com"><span style="font-family: Courier;font-size: 12pt; ">Personal website</span></a><br>
+<span style="font-family: Courier;font-size: 12pt; ">
+	email: contact AT haojunlu DOT com
+</span>
 <br>
 
 
