--- a/index.html
+++ b/index.html
@@ -84,6 +84,14 @@
 	</span>
 </a>
 <br>
+
+<a href="article/labyrinth.html">
+	<span style="font-family: Courier;font-size: 12pt;">
+	Labyrinth
+	</span>
+</a>
+<br>
+
 </body>
 
 <br>
