add color for lab and add code

--- a/article/labyrinth.html
+++ b/article/labyrinth.html
@@ -20,7 +20,7 @@
 
 <body>
 <p align="center">
-    <canvas id="lab" width="600" height="600"
+    <canvas id="lab" width="640" height="640"
             style="border: 1px solid black;">
     </canvas>
 </p>
@@ -30,6 +30,7 @@
     post
 </a>
 </p>
+<script src="https://emgithub.com/embed.js?target=https://github.com/Lst0621/Lst0621.github.io/blob/master/src/labyrinth.ts&style=solarized-light&showBorder=on&showLineNumbers=on&showFileMeta=on"></script>
 
 <a href="../index.html">
     Back
