ERP is Recursive Page

--- a/index.html
+++ b/index.html
@@ -91,6 +91,12 @@
 	</span>
 </a>
 <br>
+<a href="article/recursive_page.html">
+	<span style="font-family: Courier;font-size: 12pt;">
+	Recursive Page
+	</span>
+</a>
+<br>
 
 </body>
 
