--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
 		</span><br>
     </font>
 </h1>
-<br>
 <h1>
 		<span style="font-size: 12pt; font-family: Courier;">
 	Contact
@@ -41,6 +40,13 @@
 </span>
 <br>
 
+<h1>
+		<span style="font-size: 12pt; font-family: Courier;">
+	Progress
+		</span>
+	<br>
+	<img src="http://ghchart.rshah.org/CB4042/Lst0621" alt="commit"/>
+</h1>
 
 <h1>
 		<span style="font-size: 12pt; font-family: Courier; padding-bottom: 0pt">
