add click text for lab

--- a/article/labyrinth.html
+++ b/article/labyrinth.html
@@ -14,7 +14,7 @@
 
 <h1 style="margin-top: 10;" align="center">
 		<span id="head_span" style="font-size: 24pt">
-            labyrinth
+            Labyrinth
 		</span><br>
 </h1>
 
@@ -26,9 +26,8 @@
 </p>
 <script src="../src/labyrinth.js"></script>
 <p>
-    Inspired by an Ins <a href=" https://www.instagram.com/p/Bg6UJ3nHLEU/">
-    post
-</a>
+    Inspired by an Ins
+    <a href=" https://www.instagram.com/p/Bg6UJ3nHLEU/">post</a>. Click on canvas to reset.
 </p>
 <script src="https://emgithub.com/embed.js?target=https://github.com/Lst0621/Lst0621.github.io/blob/master/src/labyrinth.ts&style=solarized-light&showBorder=on&showLineNumbers=on&showFileMeta=on"></script>
 
