credit card refer

--- a/index.html
+++ b/index.html
@@ -105,6 +105,16 @@
 <br>
 
 </body>
+<h1>
+	<span style="font-size: 12pt; font-family: Courier;">
+	Finance
+	</span>
+</h1>
+<a href="article/credit_card_refer.html">
+	<span style="font-family: Courier;font-size: 12pt;">
+	Credit Card Refer
+	</span>
+</a>
 
 <br>
 <h1>
