--- a/index.html
+++ b/index.html
@@ -103,6 +103,12 @@
 	</span>
 </a>
 <br>
+<a href="article/draw_trochoid.html">
+	<span style="font-family: Courier;font-size: 12pt;">
+	Trochoid
+	</span>
+</a>
+<br>
 
 </body>
 <h1>
