--- a/article/draw_trochoid.html
+++ b/article/draw_trochoid.html
@@ -36,6 +36,9 @@
     <label for="d_R_ratio">d_R_ratio</label>
     <input type=number step="0.01" id="d_R_ratio" name="d_R_ratio" >
     <br>
+    <input type="checkbox" id="clear_prev">
+    <label for="clear_prev">Clear previously drawn ones</label>
+    <br>
     <button onclick="update()">Update</button>
 </p>
 
