add rotate and sample rate

--- a/article/draw_trochoid.html
+++ b/article/draw_trochoid.html
@@ -28,13 +28,19 @@
     <br>
     <br>
     <label for="r_R_ratio_a">r/R numerator</label>
-    <input type="number" id="r_R_ratio_a" name="r_R_ratio_a" >
+    <input type="number" id="r_R_ratio_a" name="r_R_ratio_a" value="3">
     <br>
     <label for="r_R_ratio_b">r/R denominator</label>
-    <input type="number" id="r_R_ratio_b" name="r_R_ratio_b" >
+    <input type="number" id="r_R_ratio_b" name="r_R_ratio_b" value="5">
     <br>
     <label for="d_R_ratio">d_R_ratio</label>
-    <input type=number step="0.01" id="d_R_ratio" name="d_R_ratio" >
+    <input type=number step="0.01" id="d_R_ratio" name="d_R_ratio" value="0.8">
+    <br>
+    <label for="rotate">rotate</label>
+    <input type=number step="0.01" id="rotate" name="rotate" value="0">
+    <br>
+    <label for="count_per_round">count_per_round</label>
+    <input type="number" id="count_per_round" name="count_per_round" value="1000">
     <br>
     <input type="checkbox" id="clear_prev">
     <label for="clear_prev">Clear previously drawn ones</label>
