add link to source

--- a/article/draw_trochoid.html
+++ b/article/draw_trochoid.html
@@ -49,6 +49,7 @@
 </p>
 
 <script src="../src/draw_trochoid.js"></script>
+<script src="https://emgithub.com/embed.js?target=https://github.com/Lst0621/Lst0621.github.io/blob/master/src/draw_trochoid.ts&style=solarized-light&showBorder=on&showLineNumbers=on&showFileMeta=on"></script>
 
 
 
