--- a/article/draw_trochoid.html
+++ b/article/draw_trochoid.html
@@ -43,7 +43,10 @@
     <input type="number" id="count_per_round" name="count_per_round" value="1000">
     <br>
     <input type="checkbox" id="clear_prev">
-    <label for="clear_prev">Clear previously drawn ones</label>
+    <label for="clear_prev">Clear previously drawn trajectories</label>
+    <br>
+    <input type="checkbox" id="animation">
+    <label for="animation">Animation (Currently works when prev trajectories are cleared)</label>
     <br>
     <button onclick="update()">Update</button>
 </p>
