--- a/index.html
+++ b/index.html
@@ -121,6 +121,12 @@
 	Credit Card Refer
 	</span>
 </a>
+<br>
+<a href="article/virtual_card.html">
+	<span style="font-family: Courier;font-size: 12pt;">
+	Virtual Credit Card Number
+	</span>
+</a>
 
 <br>
 <h1>
