share dis claimer text

--- a/article/credit_card_refer.html
+++ b/article/credit_card_refer.html
@@ -36,11 +36,14 @@
 <iframe height="50%" width="70%"
         src="https://docs.google.com/spreadsheets/d/e/2PACX-1vR87iUBTzxO_bINQYYYEb5WMhtMxKi2qYvlQXYrnxKlhQ_IQg6kxzQLhLZadkgCWGNKwJAMaGbxdsqS/pubhtml?gid=0&amp;single=true&amp;chrome=false"></iframe>
 <br>
-<p>
-    Disclaimer. This site is for entertainment purpose only. Please be responsible for your own financial situation.
-</p>
-</body>
+<p id="disclaimer"></p>
+<script src="../src/disclaimer.js"></script>
+<script>
+    add_disclaimer("disclaimer")
+</script>
+
 <a href="../index.html">
     Back
 </a>
+</body>
 </html>
