--- a/article/virtual_card.html
+++ b/article/virtual_card.html
@@ -34,6 +34,12 @@
     <br>
 </p>
 
+<p id="disclaimer"></p>
+<script src="../src/disclaimer.js"></script>
+<script>
+    add_disclaimer("disclaimer")
+</script>
+
 <a href="../index.html">
     Back
 </a>
