add last modify to main page

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
 		</span><br>
     </font>
 </h1>
+<p id="modify_time"></p>
 <h1>
 		<span style="font-size: 12pt; font-family: Courier;">
 	Contact
@@ -166,4 +167,9 @@
 	</span>
 </a>
 <br>
+
+<script src="src/last_modify.js"></script>
+<script>
+	get_last_modify(["index.html"], "modify_time")
+</script>
 
