change git commit graph to https

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	Progress
 		</span>
 	<br>
-	<img src="http://ghchart.rshah.org/CB4042/Lst0621" alt="commit"/>
+	<img src="https://ghchart.rshah.org/CB4042/Lst0621" alt="commit"/>
 </h1>
 
 <h1>
