explicitly list website

--- a/index.html
+++ b/index.html
@@ -35,7 +35,16 @@
 <a href="https://www.github.com/Lst0621/"><span style="font-family: Courier;font-size: 12pt; ">GitHub</span></a><br>
 <a href="https://www.linkedin.com/in/haojunlu/"><span style="font-family: Courier;font-size: 12pt; ">LinkedIn</span></a>
 <br>
-<a href="http://www.haojunlu.com"><span style="font-family: Courier;font-size: 12pt; ">Personal website</span></a><br>
+<span style="font-family: Courier;font-size: 12pt; ">
+	website:
+<a href="https://www.haojunlu.com">www.haojunlu.com</a>
+|
+<a href="https://www.haojun.lu">www.haojun.lu</a>
+|
+<a href="https://Lst0621.github.io">Lst0621.github.io</a>
+</span>
+<br>
+
 <span style="font-family: Courier;font-size: 12pt; ">
 	email: contact AT haojunlu DOT com
 </span>
