use one style for h1

--- a/index.html
+++ b/index.html
@@ -1,36 +1,43 @@
 <head>
-    <title>Haojun Lu</title>
-    <link rel="icon" href="./img/flame1.png">
+	<title>Haojun Lu</title>
+	<link rel="icon" href="./img/flame1.png">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-9BLVHLETMC"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
-		function gtag(){dataLayer.push(arguments);}
+
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+
 		gtag('js', new Date());
 		gtag('config', 'G-9BLVHLETMC');
 	</script>
 </head>
 
-<meta name="theme-color" content="#FFBA84" />
+<meta name="theme-color" content="#FFBA84"/>
 <style>
 	html * {
 		background: #FFBA84;
+	}
+
+	h1 {
+		font-size: 12pt;
+		font-family: "Courier", serif;
 	}
 </style>
 
 <h1 style="margin-top: 10;" align="left">
 	<meta charset="utf-8">
-    <font color="black" face="Courier">
+	<font color="black" face="Courier">
 		<span style="font-size: 24pt; font-weight:normal">
 			陆昊俊/ Haojun Lu
 		</span><br>
-    </font>
+	</font>
 </h1>
 <p id="modify_time"></p>
 <h1>
-		<span style="font-size: 12pt; font-family: Courier;">
 	Contact
-		</span>
 </h1>
 <a href="https://www.github.com/Lst0621/"><span style="font-family: Courier;font-size: 12pt; ">GitHub</span></a><br>
 <a href="https://www.linkedin.com/in/haojunlu/"><span style="font-family: Courier;font-size: 12pt; ">LinkedIn</span></a>
@@ -51,17 +58,12 @@
 <br>
 
 <h1>
-		<span style="font-size: 12pt; font-family: Courier;">
 	Progress
-		</span>
-	<br>
-	<img src="https://ghchart.rshah.org/CB4042/Lst0621" alt="commit"/>
 </h1>
+<img src="https://ghchart.rshah.org/CB4042/Lst0621" alt="commit"/>
 
 <h1>
-		<span style="font-size: 12pt; font-family: Courier; padding-bottom: 0pt">
 	Website
-		</span>
 </h1>
 <body style="font-family:'Verdana'">
 <a href="article/set_up_website.html"><span style="font-family: Courier;font-size: 12pt;">
@@ -76,9 +78,7 @@
 <br>
 <br>
 <h1>
-		<span style="font-size: 12pt; font-family: Courier;">
 	Widgets
-		</span>
 </h1>
 <a href="article/tree.html">
 	<span style="font-family: Courier;font-size: 12pt;">
@@ -121,10 +121,9 @@
 <br>
 
 </body>
+
 <h1>
-	<span style="font-size: 12pt; font-family: Courier;">
 	Finance
-	</span>
 </h1>
 <a href="article/credit_card_refer.html">
 	<span style="font-family: Courier;font-size: 12pt;">
@@ -140,9 +139,7 @@
 
 <br>
 <h1>
-	<span style="font-size: 12pt; font-family: Courier;">
-	Game trick
-	</span>
+	Games
 </h1>
 <body>
 <a href="article/click.html">
@@ -160,9 +157,7 @@
 </body>
 
 <h1>
-		<span style="font-size: 12pt; font-family: Courier;">
-            Miscellaneous
-		</span>
+	Miscellaneous
 </h1>
 <a href="article/reading_list.html">
 	<span style="font-family: Courier;font-size: 12pt;">
