--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <head>
 	<title>Haojun Lu</title>
 	<link rel="icon" href="./img/flame1.png">
+	<link rel="stylesheet" href="css/default.css">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-9BLVHLETMC"></script>
 	<script>
@@ -16,16 +17,6 @@
 </head>
 
 <meta name="theme-color" content="#FFBA84"/>
-<style>
-	html * {
-		background: #FFBA84;
-	}
-
-	h1 {
-		font-size: 12pt;
-		font-family: "Courier", serif;
-	}
-</style>
 
 <h1 style="margin-top: 10;" align="left">
 	<meta charset="utf-8">
@@ -39,8 +30,8 @@
 <h1>
 	Contact
 </h1>
-<a href="https://www.github.com/Lst0621/"><span style="font-family: Courier;font-size: 12pt; ">GitHub</span></a><br>
-<a href="https://www.linkedin.com/in/haojunlu/"><span style="font-family: Courier;font-size: 12pt; ">LinkedIn</span></a>
+<a href="https://www.github.com/Lst0621/">GitHub</a><br>
+<a href="https://www.linkedin.com/in/haojunlu/">LinkedIn</a>
 <br>
 <span style="font-family: Courier;font-size: 12pt; ">
 	website:
@@ -66,57 +57,42 @@
 	Website
 </h1>
 <body style="font-family:'Verdana'">
-<a href="article/set_up_website.html"><span style="font-family: Courier;font-size: 12pt;">
+<a href="article/set_up_website.html">
 	Set up a website with your own domain name
-</span>
 </a>
 <br>
-<a href="article/github_io_deploy.html"><span style="font-family: Courier;font-size: 12pt;">
+<a href="article/github_io_deploy.html">
 	GitHub IO Deploy
-</span>
 </a>
-<br>
 <br>
 <h1>
 	Widgets
 </h1>
 <a href="article/tree.html">
-	<span style="font-family: Courier;font-size: 12pt;">
 	Fractal tree
-</span>
 </a>
 <br>
 
 <a href="article/gol.html">
-	<span style="font-family: Courier;font-size: 12pt;">
 	Game of Life
-	</span>
 </a>
 <br>
 
 <a href="article/calendar.html">
-	<span style="font-family: Courier;font-size: 12pt;">
 	Calendar
-	</span>
 </a>
 <br>
 
 <a href="article/labyrinth.html">
-	<span style="font-family: Courier;font-size: 12pt;">
 	Labyrinth
-	</span>
 </a>
 <br>
 <a href="article/recursive_page.html">
-	<span style="font-family: Courier;font-size: 12pt;">
 	Recursive Page
-	</span>
 </a>
 <br>
 <a href="article/draw_trochoid.html">
-	<span style="font-family: Courier;font-size: 12pt;">
 	Trochoid
-	</span>
 </a>
 <br>
 
@@ -126,15 +102,11 @@
 	Finance
 </h1>
 <a href="article/credit_card_refer.html">
-	<span style="font-family: Courier;font-size: 12pt;">
 	Credit Card Refer
-	</span>
 </a>
 <br>
 <a href="article/virtual_card.html">
-	<span style="font-family: Courier;font-size: 12pt;">
 	Virtual Credit Card Number
-	</span>
 </a>
 
 <br>
@@ -143,15 +115,11 @@
 </h1>
 <body>
 <a href="article/click.html">
-	<span style="font-family: Courier;font-size: 12pt;">
 	Auto mouse click script
-	</span>
 </a>
 <br>
 <a href="article/controller.html">
-	<span style="font-family: Courier;font-size: 12pt;">
 	How to request Xbox Controller repair
-	</span>
 </a>
 <br>
 </body>
@@ -160,15 +128,11 @@
 	Miscellaneous
 </h1>
 <a href="article/reading_list.html">
-	<span style="font-family: Courier;font-size: 12pt;">
 	Reading List
-	</span>
 </a>
 <br>
 <a href="article/frog_toad.html">
-	<span style="font-family: Courier;font-size: 12pt;">
 	Frog & Toad
-	</span>
 </a>
 <br>
 
