explicitly list linkedin and github id

--- a/index.html
+++ b/index.html
@@ -30,23 +30,23 @@
 <h1>
 	Contact
 </h1>
-<a href="https://www.github.com/Lst0621/">GitHub</a><br>
-<a href="https://www.linkedin.com/in/haojunlu/">LinkedIn</a>
-<br>
-<span style="font-family: Courier;font-size: 12pt; ">
+<p>
+	LinkedIn:
+	<a href="https://www.linkedin.com/in/haojunlu/">haojunlu</a>
+	<br>
+	GitHub:
+	<a href="https://www.github.com/Lst0621/">Lst0621</a>
+	<br>
 	website:
-<a href="https://www.haojunlu.com">www.haojunlu.com</a>
-|
-<a href="https://www.haojun.lu">www.haojun.lu</a>
-|
-<a href="https://Lst0621.github.io">Lst0621.github.io</a>
-</span>
-<br>
-
-<span style="font-family: Courier;font-size: 12pt; ">
-	email: contact AT haojunlu DOT com
-</span>
-<br>
+	<a href="https://www.haojunlu.com">www.haojunlu.com</a>
+	|
+	<a href="https://www.haojun.lu">www.haojun.lu</a>
+	|
+	<a href="https://Lst0621.github.io">Lst0621.github.io</a>
+	<br>
+	email: contact{AT}haojunlu{DOT}com
+	<br>
+</p>
 
 <h1>
 	Progress
