use ts to update color meta

--- a/index.html
+++ b/index.html
@@ -16,8 +16,6 @@
 	</script>
 </head>
 
-<meta name="theme-color" content="#FFBA84"/>
-
 <h1 style="margin-top: 10;" align="left">
 	<meta charset="utf-8">
 	<font color="black" face="Courier">
@@ -141,3 +139,7 @@
 	get_last_modify(["index.html"], "modify_time")
 </script>
 
+<script src="src/update_color_meta.js"></script>
+<script>
+	update_theme_color_as_bg_color()
+</script>
