use icon for contact

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <head>
+	<meta name="viewport" content="width=device-width"/>
 	<title>Haojun Lu</title>
 	<link rel="icon" href="./img/flame1.png">
 	<link rel="stylesheet" href="css/default.css">
@@ -16,6 +17,12 @@
 	</script>
 </head>
 
+<style>
+	.contact_icon {
+		width: 1em;
+	}
+</style>
+
 <h1 style="margin-top: 10;" align="left">
 	<meta charset="utf-8">
 	<font color="black" face="Courier">
@@ -28,21 +35,33 @@
 <h1>
 	Contact
 </h1>
+
 <p>
-	LinkedIn:
-	<a href="https://www.linkedin.com/in/haojunlu/">haojunlu</a>
+	<a href="https://www.linkedin.com/in/haojunlu/">
+		<img class="contact_icon"
+			 src="https://content.linkedin.com/content/dam/me/brand/en-us/brand-home/logos/In-Blue-Logo.png.original.png"
+			 alt="linkedin_log"/>
+		haojunlu
+	</a>
 	<br>
-	GitHub:
-	<a href="https://www.github.com/Lst0621/">Lst0621</a>
+	<a href="https://www.github.com/Lst0621/">
+		<img class="contact_icon"
+			 src="https://github.githubassets.com/pinned-octocat.svg"
+			 alt="github_logo"/>
+		Lst0621
+	</a>
 	<br>
-	website:
+	<img class="contact_icon"
+		 src="https://img.icons8.com/external-kiranshastry-lineal-kiranshastry/256/000000/external-website-advertising-kiranshastry-lineal-kiranshastry.png"
+		 alt="web_logo"/>
 	<a href="https://www.haojunlu.com">www.haojunlu.com</a>
 	|
 	<a href="https://www.haojun.lu">www.haojun.lu</a>
 	|
 	<a href="https://Lst0621.github.io">Lst0621.github.io</a>
 	<br>
-	email: contact{AT}haojunlu{DOT}com
+	<img class="contact_icon" src="https://img.icons8.com/fluency/96/000000/email-open.png" alt="email_logo"/>
+	contact{AT}haojunlu{DOT}com
 	<br>
 </p>
 
@@ -143,3 +162,8 @@
 <script>
 	update_theme_color_as_bg_color()
 </script>
+
+<h1>
+	Disclosure
+</h1>
+<a href="https://icons8.com/icon/u6SGklrDSZ3b/website">Website icon by Icons8 </a>
