--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <head>
 	<meta name="viewport" content="width=device-width"/>
+	<meta charset="UTF-8">
 	<title>Haojun Lu</title>
 	<link rel="icon" href="./img/flame1.png">
 	<link rel="stylesheet" href="css/default.css">
@@ -24,7 +25,6 @@
 </style>
 
 <h1 style="margin-top: 10;" align="left">
-	<meta charset="utf-8">
 	<font color="black" face="Courier">
 		<span style="font-size: 24pt; font-weight:normal">
 			陆昊俊/ Haojun Lu
@@ -152,6 +152,12 @@
 	Frog & Toad
 </a>
 <br>
+<h1>
+	Coding
+</h1>
+<a href="article/leet/leet_2183.html">
+	LeetCode 2183 Count Array Pairs Divisible by K
+</a>
 
 <script src="src/last_modify.js"></script>
 <script>
