add last modify to 2183

--- a/article/leet/leet_2183.html
+++ b/article/leet/leet_2183.html
@@ -21,6 +21,7 @@
 </head>
 <body>
 <h1>LeetCode 2183 Count Array Pairs Divisible by K</h1>
+<p id="modify_time"></p>
 
 <h1>Problem</h1>
 Given a 0-indexed integer array nums of length n and an integer k, return the number of pairs (i, j) such that: <br>
@@ -109,3 +110,8 @@ Of course, any number, which is already a multiple of k, can be paired with any 
 
 </body>
 </html>
+
+<script src="../../src/last_modify.js"></script>
+<script>
+    get_last_modify(["article/leet/leet_2183.html"], "modify_time")
+</script>
